Alteração para tratamento de erros