@@ -24,18 +24,19 @@ public class WebSecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())).authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.POST, "/customers/**").permitAll()
-                       // .requestMatchers(HttpMethod.GET, "/customers/**").permitAll()
-                       // .requestMatchers(HttpMethod.PUT, "/customers/**").permitAll()
-                        // .requestMatchers(HttpMethod.POST, "/reservations/**").permitAll()
-                        //.requestMatchers(HttpMethod.GET, "/reservations/**").permitAll()
-                        //.requestMatchers(HttpMethod.PUT, "/reservations/**").permitAll()
-                        //.requestMatchers(HttpMethod.DELETE, "/reservations/**").permitAll()
+                       .requestMatchers(HttpMethod.GET, "/customers/**").permitAll()
+                       .requestMatchers(HttpMethod.PUT, "/customers/**").permitAll()
+                         .requestMatchers(HttpMethod.POST, "/reservations/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/reservations/**").permitAll()
+                        .requestMatchers(HttpMethod.PUT, "/reservations/**").permitAll()
+                        .requestMatchers(HttpMethod.DELETE, "/reservations/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/units/**").permitAll()
-                      //  .requestMatchers(HttpMethod.GET, "/units/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/units/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/auth/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/swagger-ui/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/v3/**").permitAll()
-                        //.requestMatchers(HttpMethod.POST, "/api/sync/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/sync/**").permitAll()
+                        .requestMatchers("/error").permitAll()
 
 
 
@@ -59,22 +60,21 @@ public class WebSecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Permite requisições do seu frontend
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        // 1. Quem pode acessar? (Front-end)
+        // Coloque "*" para liberar geral ou a URL específica do front (ex: localhost:3000)
+        configuration.setAllowedOrigins(List.of("http://localhost:3003", "http://localhost:5173", "*"));
 
-        // Métodos permitidos
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // 2. Quais métodos são permitidos?
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
 
-        // Cabeçalhos permitidos
+        // 3. Quais cabeçalhos são aceitos? (Authorization é essencial para o JWT)
         configuration.setAllowedHeaders(List.of("*"));
 
-        // Permite envio de credenciais (cookies, etc.)
-        configuration.setAllowCredentials(true);
+        // 4. (Opcional) Permite envio de Cookies/Credenciais
+        // configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // Aplica esta configuração a todos os paths da sua API
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 }
